@@ -1,7 +1,6 @@
 package org.example.servlet;
 
 import com.google.gson.Gson;
-import org.example.model.PostEntity;
 import org.example.service.PostService;
 import org.example.servlet.dto.PostDto;
 import org.example.servlet.dto.TagDto;
@@ -19,7 +18,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.*;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -36,6 +35,7 @@ public class PostServletTest {
     private HttpServletResponse response;
     @Mock
     private RequestDispatcher dispatcher;
+
     @InjectMocks
     private PostServlet postServlet;
     private final PostDtoMapper postDtoMapper = new PostDtoMapperImpl();
@@ -54,18 +54,22 @@ public class PostServletTest {
         postDto.setTitle("Post 1");
         postDto.setContent("Content for post 1");
         postDto.setUserId(1L);
+        List<TagDto> tags = Arrays.asList(new TagDto(1L, "Tag 1"), new TagDto(2L, "Tag 2"));
+        postDto.setTags(tags);
 
         PostDto postDto2 = new PostDto();
         postDto2.setId(2L);
         postDto2.setTitle("Post 2");
         postDto2.setContent("Content for post 2");
         postDto2.setUserId(2L);
+        List<TagDto> tags2 = List.of(new TagDto(2L, "Tag 2"));
+        postDto2.setTags(tags2);
 
         List<PostDto> expectedPosts = new ArrayList<>();
         expectedPosts.add(postDto);
         expectedPosts.add(postDto2);
 
-        when(request.getParameter("id")).thenReturn("1");
+        when(request.getParameter("user_id")).thenReturn("1","2");
         when(postService.findPostsByUserId(anyLong())).thenReturn(postDtoMapper.toEntityList(expectedPosts));
 
         StringWriter stringWriter = new StringWriter();
@@ -77,23 +81,22 @@ public class PostServletTest {
         verify(response).setContentType("application/json");
         verify(response).setCharacterEncoding("UTF-8");
 
-        String expectedJson = gson.toJson(postDto);
         writer.flush();
-        assertEquals(expectedJson, stringWriter.toString());
+        assertEquals(gson.toJson(expectedPosts), stringWriter.toString());
     }
 
     @Test
     public void testDoGetAllPosts() throws IOException {
         List<PostDto> posts = new ArrayList<>();
-        posts.add(new PostDto(1L, "Test Post", "This is a test post",
-                1L, Collections.singletonList(new TagDto(1L, "Test Tag"))));
-        posts.add(new PostDto(2L, "Test Post2", "This is a test post2",
-                2L, Collections.singletonList(new TagDto(2L, "Test Tag2"))));
+        posts.add(new PostDto(1L, "Post 1", "Content for post 1",
+                1L, Arrays.asList(new TagDto(1L, "Tag 1"), new TagDto(2L, "Tag 2"))));
+        posts.add(new PostDto(2L, "Post 2", "Content for post 2",
+                2L, List.of(new TagDto(2L, "Tag 2"))));
         when(request.getParameter("id")).thenReturn(null);
         when(postService.findAll()).thenReturn(postDtoMapper.toEntityList(posts));
 
-        StringWriter stringWriter = new StringWriter();
-        PrintWriter writer = new PrintWriter(stringWriter);
+        StringWriter actualStringWriter = new StringWriter();
+        PrintWriter writer = new PrintWriter(actualStringWriter);
         when(response.getWriter()).thenReturn(writer);
 
         postServlet.doGet(request, response);
@@ -103,7 +106,7 @@ public class PostServletTest {
 
         String expectedJson = gson.toJson(posts);
         writer.flush();
-        Assertions.assertEquals(expectedJson, stringWriter.toString());
+        Assertions.assertEquals(expectedJson, actualStringWriter.toString());
     }
 
     @Test
